# SimpleWebVpnPanel

./: .gitignore  CMakeLists.txt  README.md  main.cpp
templates/: login.html  main_page.html
